--- a/style.css
+++ b/style.css
@@ -5,250 +5,159 @@
 }
 
 body {
-    background-color: #00004d;
-    background: linear-gradient( -90deg,  rgb(49, 137, 133), #00004d);
-    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background: rgb(2,0,36);
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
 
+.cont {
+    justify-content: center center;
+    text-align: center center;
+    align-items: center;
 }
 
 .menu {
-    padding: 30px;
+    justify-content: center center;
+    align-items: center;
+    text-align: center;
+    margin: 20px;
+    padding: 20px;
+}
+
+.menu a {
+    padding: 10px;
+    text-decoration: none;
     color: white;
+    transition: 400ms;
+}
+
+.menu a:hover {
+    color: rgb(65, 187, 187);
+    background-color: black;
+    border-radius: 10px;
+}
+
+.info {
+    display: flex;
     justify-content: center center;
     text-align: center;
     align-items: center;
-    justify-content: space-between;
-    display: flex;
-    border-bottom-left-radius: 60px;
+    padding-left: 10%;
+    margin: 20px;
+    margin-top: 30px;
 }
 
-.menu nav {
-    padding-left: 20px;
-    padding-right: 20px;
+
+.foto {
+    width: 250px;
+    border-radius: 260px;
+    margin: 10px;
+    border: solid aqua 2px;
+    transition: 400ms;
 }
 
-.menu img {
-    width: 50px;
-    height: 30px;
+.foto:hover {
+    box-shadow: 5px 5px 43px 0px aqua;
+-webkit-box-shadow: 5px 5px 43px 0px aqua(0,0,0,0.75);
+-moz-box-shadow: 5px 5px 43px 0px aqua(0,0,0,0.75);
+
+scale: 1.1;
 }
 
-.bt {
-    text-decoration: none;
+.info p {
+    font-size: 100%;
     color: white;
-    background-color: rgb(103, 150, 232);
-    padding: 10px;
-    border-radius: 5px;
 }
 
-.bt:hover {
-    background-color: rgb(0, 97, 243);
+.texto {
+    display: flex;
+    justify-content: center center;
+    text-align: center;
+    align-items: center;
+    margin: 20px;
+    border-radius: 30px;
+    padding: 20px;
 }
 
-.mincaja img:hover{
-    width: 300px;
-    height: 300px;
-    border-radius: 1800px;
-    box-shadow: 5px  5px 35px 15px aqua;
-    border:solid 0px #00004d;
-
+.texto p {
+    font-size: 100%;
+    color: white;
 }
-
 
 .caja {
     justify-content: center center;
     text-align: center;
     align-items: center;
-    display: block;
-    margin: 20px;
 }
 
 .mincaja img {
-    width: 300px;
-    height: 300px;
-    border-radius: 1800px;
-    margin: 10px;
-    border:solid 6px #00004d;
-
+    margin: 20px;
 }
 
-.mincaja p {
-    margin-top: 30px;
-    margin-bottom: 30px;
-    font-size: 20px;
+.bt img {
+    width: 200px;
+    transition: 400ms;
 }
 
-.caja2 {
-    display: block;
-    justify-content: center center;
-    text-align: center;
-    align-items: center;
-}
-
-.kit{
-    justify-content: center center;
-    text-align: center;
-    align-items: center;
-    background: linear-gradient( 30deg,  aqua -300px , #00004d 300px );
-    padding: 20px;
-    margin: 30px;
-    border-radius: 30px;
-    display: block;
-}
-
-.kit h3 {
-    font-size: 20px;
-    margin-bottom: 30px;
-}
-
-.kit p {
-    font-size: 20px;
-    margin-top: 30px;
-    margin-bottom: 50px;
-}
-
-.caja3 {
-    justify-content: center center;
-    text-align: center;
-    align-items: center;
-    display: flex;
-    margin-right: 80px;
-    justify-content: space-evenly;
-}
-
-.caja3 img {
-    width: 300px;
-}
-
-.info {
-    border-radius: 30px;
-    padding: 20px;
-    background-color: #00004d;
-    box-shadow: 2px 2px 2px 2px black;
-    margin: 30px;
-    opacity: 0.8;
-}
-
-
-.kit2 {
-    justify-content: center center;
-    text-align: center;
-    align-items: center;
-    padding: 20px;
-    margin: 10px;
-    border-radius: 30px;
-    display: inline-block;
-}
-
-.bt2 {
-    text-decoration: none;
-    color: white;
+.bt img:hover {
+    scale: 1.2;
 }
 
 footer {
-    background-color: #00004d;
-    padding: 30px;
-}
-
-@media (min-width: 300px ) and (max-width:500px) {
-.menu {
-    padding: 20px;
+    justify-content: center center;
+    text-align: center;
+    align-items: center;
     color: white;
-    justify-content: center center;
-    text-align: center;
-    align-items: center;
-    display: block;
-}
-
-.menu img {
-    margin-top: 30px;
-    margin-bottom: 30px;
-    width: 50px;
-    height: 30px;
-}
-    
-.bt {
-        text-decoration: none;
-        color: white;
-        background-color: rgb(103, 150, 232);
-        padding: 5px;
-        border-radius: 5px;
-}
-    
-.bt:hover {
-        background-color: rgb(0, 97, 243);
-}
-    
-.mincaja img:hover{
-    width: 280px;
-    height: 280px;
-    border-radius: 1800px;
-    margin: 0px;
-    box-shadow: 5px  5px 35px 15px aqua;
-    border:solid 0px #00004d;
-    
-}
-    
-.caja {
-        justify-content: center center;
-        text-align: center;
-        align-items: center;
-        display: block;
-        margin: 20px;
-}
-    
-.mincaja img {
-        width: 280px;
-        height: 280px;
-        border-radius: 1800px;
-        margin: 0px;
-        border:solid 6px #00004d;
-    
-}
-
-.caja3 {
-    justify-content: center center;
-    text-align: center;
-    align-items: center;
-    display: block;
-    margin: 0%;
-}
-
-.caja3 img {
-    width: 300px;
-    height: 300px;
-}
-
-.info {
-    border-radius: 30px;
-    background-color: #00004d;
-    box-shadow: 2px 2px 2px 2px black;
-    opacity: 0.8;
     margin: 20px;
 }
 
-}
-
-@media (min-width: 500px) and (max-width: 800px) {
-
-    .caja3 {
+@media (min-width: 300px) and (max-width: 800px) {
+    .info {
+        display: block;
         justify-content: center center;
         text-align: center;
         align-items: center;
-        display: block;
-        margin: 0%;
-    }
-    
-    .caja3 img {
-        width: 300px;
-        height: 300px;
-    }
-    
-    .info {
-        border-radius: 30px;
-        background-color: #00004d;
-        box-shadow: 2px 2px 2px 2px black;
-        opacity: 0.8;
+        padding-left: 0%;
         margin: 20px;
+        margin-top: 30px;
     }
+    
+    .info p {
+        font-size: 100%;
+        color: white;
+    }
+
+    .texto p {
+        font-size: 100%;
+    }
+
+    .texto {
+        display: block;
+        justify-content: center center;
+        text-align: center;
+        align-items: center;
+        margin: 10px;
+        border-radius: 30px;
+        padding: 0px;
+    }
+
+    .foto {
+        width: 200px;
+        border-radius: 260px;
+        margin: 10px;
+        border: solid aqua 2px;
+        transition: 400ms;
+    }
+
+    .bt {
+        justify-self: center center;
+        text-align: center;
+        align-items: center;
+        display: block;
+        margin: 30px;
+    }
+    
     
 }
